[gd_scene load_steps=25 format=3 uid="uid://dt2k3ujn27ptr"]

[ext_resource type="Script" uid="uid://bpldw3wj52pdt" path="res://Codigo/Enemigos/Enemigo_melee.gd" id="1_60dk8"]
[ext_resource type="Material" uid="uid://bw2fjyuinhj5f" path="res://assets/Jugadores/Shaders/Material_daño_shader.tres" id="2_ngb4v"]
[ext_resource type="PackedScene" uid="uid://iqb7u2n6l32s" path="res://escenas/Ui/Barra_vida.tscn" id="2_rijfu"]
[ext_resource type="Texture2D" uid="uid://b2b7mdgn7vre7" path="res://assets/Jugadores/Sprite_Caballero_Atacando_Final.png" id="3_avfyt"]
[ext_resource type="Texture2D" uid="uid://c4lk5ld4aws1m" path="res://assets/Jugadores/a2.png" id="4_dom0f"]
[ext_resource type="Texture2D" uid="uid://c43s8ok3siun3" path="res://assets/Jugadores/a3.png" id="5_v8515"]
[ext_resource type="Texture2D" uid="uid://c117b5mwim582" path="res://assets/Jugadores/Sprites_Caballero_Caminando.png" id="6_3btug"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sphu8"]
size = Vector2(20, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60dk8"]
size = Vector2(33, 32.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltxxq"]
atlas = ExtResource("3_avfyt")
region = Rect2(0, 0, 258, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_g653p"]
atlas = ExtResource("3_avfyt")
region = Rect2(297, 7, 295, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_uork6"]
atlas = ExtResource("3_avfyt")
region = Rect2(609, 5, 378, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_8chsa"]
atlas = ExtResource("3_avfyt")
region = Rect2(25, 480, 440, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rbv7"]
atlas = ExtResource("3_avfyt")
region = Rect2(530, 469, 440, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq4n2"]
atlas = ExtResource("6_3btug")
region = Rect2(0, 0, 216, 296)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar1aa"]
atlas = ExtResource("6_3btug")
region = Rect2(216, 0, 216, 296)

[sub_resource type="AtlasTexture" id="AtlasTexture_st1si"]
atlas = ExtResource("6_3btug")
region = Rect2(432, 0, 216, 296)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0mps"]
atlas = ExtResource("6_3btug")
region = Rect2(0, 296, 216, 296)

[sub_resource type="AtlasTexture" id="AtlasTexture_d03qh"]
atlas = ExtResource("6_3btug")
region = Rect2(216, 296, 216, 296)

[sub_resource type="AtlasTexture" id="AtlasTexture_py5ee"]
atlas = ExtResource("6_3btug")
region = Rect2(432, 296, 216, 296)

[sub_resource type="AtlasTexture" id="AtlasTexture_efui1"]
atlas = ExtResource("6_3btug")
region = Rect2(0, 0, 216, 296)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptivl"]
atlas = ExtResource("6_3btug")
region = Rect2(216, 296, 216, 296)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu6ds"]
atlas = ExtResource("6_3btug")
region = Rect2(432, 296, 216, 296)

[sub_resource type="SpriteFrames" id="SpriteFrames_8835h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltxxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g653p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uork6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8chsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rbv7")
}],
"loop": false,
"name": &"Ataque_1",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dom0f")
}, {
"duration": 1.0,
"texture": ExtResource("4_dom0f")
}, {
"duration": 1.0,
"texture": ExtResource("4_dom0f")
}, {
"duration": 1.0,
"texture": ExtResource("4_dom0f")
}, {
"duration": 1.0,
"texture": ExtResource("4_dom0f")
}],
"loop": false,
"name": &"Ataque_2",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_v8515")
}, {
"duration": 1.0,
"texture": ExtResource("5_v8515")
}, {
"duration": 1.0,
"texture": ExtResource("5_v8515")
}],
"loop": false,
"name": &"Ataque_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltxxq")
}],
"loop": true,
"name": &"Callendo",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq4n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar1aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st1si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0mps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d03qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py5ee")
}],
"loop": true,
"name": &"Corriendo",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efui1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptivl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu6ds")
}],
"loop": true,
"name": &"Parado",
"speed": 3.0
}]

[node name="Enemigo_Melee" type="CharacterBody2D" node_paths=PackedStringArray("colision_ataque", "sprite", "barra_vida", "timer_1", "timer_2", "ataque_timer", "raycast_derecha", "raycast_izquierda", "area") groups=["enemigos"]]
collision_layer = 4
script = ExtResource("1_60dk8")
"shader_daño" = ExtResource("2_ngb4v")
colision_ataque = NodePath("Area/CollisionShape2D")
sprite = NodePath("Sprite")
barra_vida = NodePath("BarraVida")
timer_1 = NodePath("Timer")
timer_2 = NodePath("Timer2")
ataque_timer = NodePath("Ataque")
raycast_derecha = NodePath("Derecha")
raycast_izquierda = NodePath("Izquierda")
area = NodePath("Area")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_sphu8")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="BarraVida" parent="." instance=ExtResource("2_rijfu")]
offset_left = -16.0
offset_top = -22.0
offset_right = 17.0
offset_bottom = -20.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.5

[node name="Izquierda" type="RayCast2D" parent="."]
target_position = Vector2(-180, 0)
collision_mask = 2

[node name="Derecha" type="RayCast2D" parent="."]
target_position = Vector2(180, 0)
collision_mask = 2

[node name="Ataque" type="Timer" parent="."]
wait_time = 5.0

[node name="Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2(17.5, -0.75)
shape = SubResource("RectangleShape2D_60dk8")
disabled = true

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-10.000001, -1.1920929e-07)
scale = Vector2(0.09259261, 0.10135135)
sprite_frames = SubResource("SpriteFrames_8835h")
animation = &"Parado"
centered = false
offset = Vector2(0, -148)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Ataque" to="." method="_on_ataque_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
